# AI_Traffic_Simulation

./: README.md  pyproject.toml
dataset/: simulated_traffic_data.csv
notebooks/: traffic_model_BiLSTM.ipynb
simulation/: main_simulation.py
source_files/: bilstm_model.py  script.py
